# declarative_pipelines

./: README.md  databricks.yml  pyproject.toml
declarative_pipelines/: __init__.py  connection.py  executor.py  functions.py  models.py  registry.py  schema.py
pipeline/: main.py
scripts/: create_test_config.py  create_test_data.py
tests/: conftest.py  test_executor.py  test_functions.py
